; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/unused/dos/extr_config.c_do_config.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/unused/dos/extr_config.c_do_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOKEN_LIST_SIZE = common dso_local global i32 0, align 4
@__crt0_argc = external dso_local global i32, align 4
@__crt0_argv = external dso_local global i8**, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_config(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %7 = load i32, i32* @TOKEN_LIST_SIZE, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %5, align 8
  %10 = alloca i8*, i64 %8, align 16
  store i64 %8, i64* %6, align 8
  %11 = call i32 (...) @set_option_defaults()
  store i32 0, i32* %3, align 4
  br label %12

12:                                               ; preds = %20, %1
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @TOKEN_LIST_SIZE, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %23

16:                                               ; preds = %12
  %17 = load i32, i32* %3, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i8*, i8** %10, i64 %18
  store i8* null, i8** %19, align 8
  br label %20

20:                                               ; preds = %16
  %21 = load i32, i32* %3, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %3, align 4
  br label %12

23:                                               ; preds = %12
  %24 = load i8*, i8** %2, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %23
  %27 = load i8*, i8** %2, align 8
  %28 = call i32 @parse_file(i8* %27, i32* %4, i8** %10)
  br label %29

29:                                               ; preds = %26, %23
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @parse_args(i32 %30, i8** %10)
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %49, %29
  %33 = load i32, i32* %3, align 4
  %34 = load i32, i32* %4, align 4
  %35 = icmp slt i32 %33, %34
  br i1 %35, label %36, label %52

36:                                               ; preds = %32
  %37 = load i32, i32* %4, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i8*, i8** %10, i64 %38
  %40 = load i8*, i8** %39, align 8
  %41 = icmp ne i8* %40, null
  br i1 %41, label %42, label %48

42:                                               ; preds = %36
  %43 = load i32, i32* %4, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i8*, i8** %10, i64 %44
  %46 = load i8*, i8** %45, align 8
  %47 = call i32 @free(i8* %46)
  br label %48

48:                                               ; preds = %42, %36
  br label %49

49:                                               ; preds = %48
  %50 = load i32, i32* %3, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %3, align 4
  br label %32

52:                                               ; preds = %32
  %53 = load i32, i32* @__crt0_argc, align 4
  %54 = load i8**, i8*** @__crt0_argv, align 8
  %55 = call i32 @parse_args(i32 %53, i8** %54)
  %56 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %56)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @set_option_defaults(...) #2

declare dso_local i32 @parse_file(i8*, i32*, i8**) #2

declare dso_local i32 @parse_args(i32, i8**) #2

declare dso_local i32 @free(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
